# recon-scripts

./: README.md  pyproject.toml  run_electrode_formatter.sh
scripts/: run_xtract_rave_subject.sh
src/recon_scripts/: __init__.py  electrodes_v2026.py
src/recon_scripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_electrodes_v2026.py
